added header draft

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 
 <body>
     <div class="wrapper">
-        <header>
-            <nav></nav>
-        </header>
+        <header class="header">
+            <ul>
+              <li>
+                <div class="home"><i class="fas fa-home"></i> Seytech</div>
+              </li>
+              <li><a href="#news">News</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li><a href="#about">About</a></li>
+            </ul>
+          </header>
+        
         <section id="column1">
             <div class="box box1"></div>
             <div class="box box2"></div>
