--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="wrapper">
         <header class="header">
             <ul>
-              <li>
-                <div class="home"><i class="fas fa-home"></i> Seytech</div>
-              </li>
-              <li><a href="#news">News</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li><a href="#about">About</a></li>
+                <li>
+                    <div class="home"><i class="fas fa-home"></i> Seytech</div>
+                </li>
+                <li><a href="#news">News</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
             </ul>
-          </header>
-        
+        </header>
+
         <section id="column1">
             <div class="box box1"></div>
             <div class="box box2"></div>
@@ -39,9 +39,13 @@
             <div class="container"></div>
             <div class="container"></div>
         </section>
-        <footer>
 
+        <footer class="footer">
+            <div class="footer-a">Footer</div>
+            <div class="footer-b"> Powered by <a href="#"> Dream Team #5</a>
+            </div>
         </footer>
+
 
     </div>
 </body>
